# TIL

./: README.md
django/airbnb_clone_coding/: README.md  pyproject.toml
django/airbnb_clone_coding/bookings/: admin.py  models.py  serializers.py
django/airbnb_clone_coding/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
django/airbnb_clone_coding/categories/: admin.py  models.py  serializers.py  urls.py  views.py
django/airbnb_clone_coding/categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_kind.py
django/airbnb_clone_coding/common/: models.py
django/airbnb_clone_coding/config/: authentication.py  settings.py  urls.py
django/airbnb_clone_coding/direct_messages/: admin.py  models.py
django/airbnb_clone_coding/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_participants_alter_message_room_and_more.py
django/airbnb_clone_coding/experiences/: admin.py  models.py  views.py
django/airbnb_clone_coding/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  (+1 more)
django/airbnb_clone_coding/medias/: admin.py  models.py  views.py
django/airbnb_clone_coding/medias/migrations/: 0001_initial.py  (+4 more)
django/airbnb_clone_coding/reviews/: admin.py  models.py  serializers.py
django/airbnb_clone_coding/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
django/airbnb_clone_coding/users/: admin.py  models.py  serializers.py  views.py
django/airbnb_clone_coding/wishlists/: models.py  serializers.py  views.py
(+76 files in other folders)
